--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </li>
                 </ul>
               </nav>
-              <a href="#" class="btn">Заказать</a>
+              <a href="#" class="btn hero__order-btn">Заказать</a>
             </div>
 
           </header>
@@ -64,7 +64,7 @@
           <div class="hero__content">
 
             <div class="hero__content-image">
-              <img src="images/intro_burger.png" alt="Фото бургера" class="hero__burger-img">
+              <img src="images/hero_burger.png" alt="Фото бургера" class="hero__burger-img">
             </div>
             <div class="hero__content-description">
               <h1 class="hero__content-title">Мы делаем</h1>
