--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="maincontent">
 
       <section class="section hero">
-        <div class="container">
+        <div class="container hero__container">
 
           <header class="header">
 
@@ -67,19 +67,21 @@
               <img src="images/hero_burger.png" alt="Фото бургера" class="hero__burger-img">
             </div>
             <div class="hero__content-description">
-              <h1 class="hero__content-title">Мы делаем</h1>
-              <div class="hero__content-text">натуральные бургеры</div>
+              <h1 class="section-title">Мы делаем</h1>
+              <div class="hero__content-text">Натуральные бургеры</div>
             </div>
+
           </div>
 
           <a href="#" class="arrow-down"></a>
+          <!-- pos: absol; отцентровать, прибить к низу, сделать заливку бекгр -->
 
         </div>
       </section>
 
-      <section class="section best section_centered">
+      <section class="section best">
         <div class="container">
-          <div class="section-title section-title_color_black section-title_position_center">
+          <div class="section-title">
             Мы лучшие
           </div>
           <ul class="best__list">
