--- a/index.html
+++ b/index.html
@@ -79,59 +79,50 @@
         </div>
       </section>
 
-      <section class="section best">
+      <section class="section section_centered best">
         <div class="container">
           <div class="section-title">
             Мы лучшие
           </div>
           <ul class="best__list">
             <li class="best__item">
-              <div class="best__icon">
-                <svg class="best__icon-pic">
-                  <use xlink:href="./img/sprite/sprite.svg#meat"></use>
-                </svg>
+              <div class="best__image">
+                <img src="images/icons/meat.svg" class="best__icon" alt="Иконка мяса">
               </div>
               <div class="best__content">
-                <div class="best__title">
-                  100% Свежее мясо
-                </div>
-                <div class="best__text">
+                <div class="best__content-title">100% Свежее мясо</div>
+                <div class="best__content-text">
                   <p>
-                    Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                    Драма представляет собой деструктивный цикл.
+                    Анапест представляет собой анапест. Ямб неравномерен.
                   </p>
                 </div>
               </div>
             </li>
             <li class="best__item">
-              <div class="best__icon">
-                <svg class="best__icon-pic">
-                  <use xlink:href="./img/sprite/sprite.svg#meat"></use>
-                </svg>
+              <div class="best__image">
+                <img src="images/icons/hand.svg" class="best__icon" alt="Иконка ладони">
               </div>
               <div class="best__content">
-                <div class="best__title">
-                  100% Свежее мясо
-                </div>
-                <div class="best__text">
+                <div class="best__content-title">Ручная сборка</div>
+                <div class="best__content-text">
                   <p>
-                    Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                    Драма представляет собой деструктивный цикл.
+                    Анапест представляет собой анапест. Ямб неравномерен.
                   </p>
                 </div>
               </div>
             </li>
             <li class="best__item">
-              <div class="best__icon">
-                <svg class="best__icon-pic">
-                  <use xlink:href="./img/sprite/sprite.svg#meat"></use>
-                </svg>
+              <div class="best__image">
+                <img src="images/icons/natural.svg" class="best__icon" alt="Иконка листочка">
               </div>
               <div class="best__content">
-                <div class="best__title">
-                  100% Свежее мясо
-                </div>
-                <div class="best__text">
+                <div class="best__content-title">Натуральные ингредиенты</div>
+                <div class="best__content-text">
                   <p>
-                    Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                    Драма представляет собой деструктивный цикл.
+                    Анапест представляет собой анапест. Ямб неравномерен.
                   </p>
                 </div>
               </div>
@@ -142,42 +133,42 @@
 
       <section class="section reviews">
         <ul class="reviews__list">
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-1.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
           </li>
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-2.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
           </li>
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-3.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
           </li>
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-4.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
           </li>
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-5.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
           </li>
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-6.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
           </li>
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-7.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
           </li>
-          <li class="reviews__item" style="background-image: url('./img/content/reviews/1.jpg')">
+          <li class="reviews__item" style="background-image: url('images/rev-8.png')">
             <div class="reviews__hover">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
             </div>
