--- a/index.html
+++ b/index.html
@@ -134,69 +134,181 @@
       <section class="section reviews">
         <ul class="reviews__list">
           <li class="reviews__item" style="background-image: url('images/rev-1.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="reviews__item" style="background-image: url('images/rev-2.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="reviews__item" style="background-image: url('images/rev-3.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="reviews__item" style="background-image: url('images/rev-4.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="reviews__item" style="background-image: url('images/rev-5.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="reviews__item" style="background-image: url('images/rev-6.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="reviews__item" style="background-image: url('images/rev-7.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="reviews__item" style="background-image: url('images/rev-8.png')">
-            <div class="reviews__hover">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quia.
+            <div class="reviews__item-hover">
+              <div class="reviews__title">Константин Спилберг</div>
+              <div class="reviews__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+              </div>
+              <div class="reviews__btn">
+                <a href="#" class="btn btn_background_black">Подробнее</a>
+              </div>
             </div>
           </li>
         </ul>
       </section>
 
+      <section class="section section_centered order">
+        <div class="section-title">Закажите доставку</div>
+        <form action="" class="form">
+          <div class="form__row">
+            <label for="" class="form__block">
+              <div class="form__block-title">Имя</div>
+              <input type="text" class="form__block-input">
+            </label>
+            <label for="" class="form__block">
+              <div class="form__block-title">Имя</div>
+              <input type="text" class="form__block-input">
+            </label>
+          </div>
+        </form>
+      </section>
+
 <!-- MainContent closed -->
     </div>
-    <ul class="fixed-menu"></ul>
+
+    <nav class="fixed-menu">
+      <ul class="fixed-menu__list">
+        <li class="fixed-menu__item active">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+          <a href="#" class="fixed-menu__link"></a>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- wrapper closed -->
   </div>
-  <ul class="fixed-menu">
-    <li class="fixed-menu__item">
-      <a href="#" class="fixed-menu__link"></a>
-    </li>
-    <li class="fixed-menu__item active">
-      <a href="#" class="fixed-menu__link"></a>
-    </li>
-    <li class="fixed-menu__item">
-      <a href="#" class="fixed-menu__link"></a>
-    </li>
-    <li class="fixed-menu__item">
-      <a href="#" class="fixed-menu__link"></a>
-    </li>
-    <li class="fixed-menu__item">
-      <a href="#" class="fixed-menu__link"></a>
-    </li>
-  </ul>
 
 </body>
 </html>
