--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
 
       <section class="section section_centered best">
         <div class="container">
-          <div class="section-title">
-            Мы лучшие
-          </div>
+          <div class="section-title section-title_black">Мы лучшие</div>
           <ul class="best__list">
             <li class="best__item">
               <div class="best__image">
@@ -138,9 +136,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -153,9 +151,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -168,9 +166,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -183,9 +181,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -198,9 +196,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -213,9 +211,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -228,9 +226,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -243,9 +241,9 @@
               <div class="reviews__title">Константин Спилберг</div>
               <div class="reviews__text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+                  Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+                  а сыр таким расплавленным.
                 </p>
               </div>
               <div class="reviews__btn">
@@ -277,7 +275,7 @@
 
     <nav class="fixed-menu">
       <ul class="fixed-menu__list">
-        <li class="fixed-menu__item active">
+        <li class="fixed-menu__item fixed-menu__item_active">
           <a href="#" class="fixed-menu__link"></a>
         </li>
         <li class="fixed-menu__item">
