--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
           </div>
 
-          <a href="#" class="arrow-down"></a>
-          <!-- pos: absol; отцентровать, прибить к низу, сделать заливку бекгр -->
+          <div class="arrow-down">
+            <a href="#" class="arrow-down__link"></a>
+          </div>
 
         </div>
       </section>
