done except dropps (burger)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="hero__content-description">
               <h1 class="section-title">Мы делаем</h1>
-              <div class="hero__content-text">Натуральные бургеры</div>
+              <div class="hero__content-text">натуральные бургеры</div>
             </div>
 
           </div>
@@ -107,7 +107,8 @@
                 <div class="best__content-text">
                   <p>
                     Драма представляет собой деструктивный цикл.
-                    Анапест представляет собой анапест. Ямб неравномерен.
+                    Анапест представляет собой анапест. Первое полустишие притягивает
+                    сюжетный реформаторский пафос.
                   </p>
                 </div>
               </div>
@@ -121,7 +122,7 @@
                 <div class="best__content-text">
                   <p>
                     Драма представляет собой деструктивный цикл.
-                    Анапест представляет собой анапест. Ямб неравномерен.
+                    Анапест представляет собой анапест.
                   </p>
                 </div>
               </div>
