--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="hero__content">
 
             <div class="hero__content-image">
-              <img src="images/hero_burger.png" alt="Фото бургера" class="hero__burger-img">
+              <img src="images/burgerd.png" alt="Фото бургера" class="hero__burger-img">
             </div>
             <div class="hero__content-description">
               <h1 class="section-title">Мы делаем</h1>
