--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <img src="images/burgerd.png" alt="Фото бургера" class="hero__burger-img">
             </div>
             <div class="hero__content-description">
-              <h1 class="section-title">Мы делаем</h1>
+              <h1 class="section-title section-title_hero">Мы делаем</h1>
               <div class="hero__content-text">натуральные бургеры</div>
             </div>
 
