--- a/index.html
+++ b/index.html
@@ -257,19 +257,58 @@
       </section>
 
       <section class="section section_centered order">
-        <div class="section-title">Закажите доставку</div>
-        <form action="" class="form">
-          <div class="form__row">
-            <label for="" class="form__block">
-              <div class="form__block-title">Имя</div>
-              <input type="text" class="form__block-input">
-            </label>
-            <label for="" class="form__block">
-              <div class="form__block-title">Имя</div>
-              <input type="text" class="form__block-input">
-            </label>
+        <div class="container">
+
+          <div class="section-title">Закажите доставку</div>
+
+          <div class="order__content">
+            <form action="" class="form">
+              <div class="form__row">
+                <label for="" class="form__block">
+                  <div class="form__block-title">Имя</div>
+                  <input type="text" class="form__block-input">
+                </label>
+                <label for="" class="form__block">
+                  <div class="form__block-title">Телефон</div>
+                  <input type="text" class="form__block-input">
+                </label>
+              </div>
+              <div class="form__row">
+                <label for="" class="form__block">
+                  <div class="form__block-title">Улица</div>
+                  <input type="text" class="form__block-input">
+                </label>
+              </div>
+              <div class="form__row">
+                <label for="" class="form__block">
+                  <div class="form__block-title">Дома</div>
+                  <input type="text" class="form__block-input">
+                </label>
+                <label for="" class="form__block">
+                  <div class="form__block-title">Корпус</div>
+                  <input type="text" class="form__block-input">
+                </label>
+                <label for="" class="form__block">
+                  <div class="form__block-title">Квартира</div>
+                  <input type="text" class="form__block-input">
+                </label>
+                <label for="" class="form__block">
+                  <div class="form__block-title">Этаж</div>
+                  <input type="text" class="form__block-input">
+                </label>
+              </div>
+            </form>
+            <form action="" class="form">
+              <div class="form__row">
+                <label for="" class="form__block">
+                  <div class="form__block-title">Комментарий</div>
+                  <input type="text" class="form__block-input">
+                </label>
+              </div>
+            </form>
           </div>
-        </form>
+          
+        </div>
       </section>
 
 <!-- MainContent closed -->
