--- a/index.html
+++ b/index.html
@@ -305,9 +305,21 @@
                   <input type="text" class="form__block-input">
                 </label>
               </div>
+              <div class="form-controlls">
+                <label for="" class="form-controlls__btn">
+                  <input type="radio" name="answer" class="form-controlls__radio">
+                  <div class="form-controlls__fake-radio"></div>
+                  <div class="form-controlls__btn-title">Потребуется сдача</div>
+                </label>
+                <label for="" class="form-controlls__btn">
+                  <input type="radio" name="answer" class="form-controlls__radio">
+                  <div class="form-controlls__fake-radio"></div>
+                  <div class="form-controlls__btn-title">Оплата по карте</div>
+                </label>
+              </div>
             </form>
           </div>
-          
+
         </div>
       </section>
 
