form-checkbox added

--- a/index.html
+++ b/index.html
@@ -317,6 +317,13 @@
                   <div class="form-controlls__btn-title">Оплата по карте</div>
                 </label>
               </div>
+              <div class="form-controlls">
+                <label for="" class="form-controlls__btn">
+                  <input type="checkbox" name="answer" class="form-controlls__checkbox">
+                  <div class="form-controlls__fake-checkbox"></div>
+                  <div class="form-controlls__btn-title">Не перезванивать</div>
+                </label>
+              </div>
             </form>
           </div>
 
