--- a/index.html
+++ b/index.html
@@ -324,6 +324,10 @@
                   <div class="form-controlls__btn-title">Не перезванивать</div>
                 </label>
               </div>
+              <div class="form__confirm">
+                <a href="#" class="btn form__confirm-btn">Заказать</a>
+                <p class="form__clear">Очистить</p>
+              </div>
             </form>
           </div>
 
