--- a/index.html
+++ b/index.html
@@ -281,20 +281,20 @@
               </div>
               <div class="form__row">
                 <label for="" class="form__block">
-                  <div class="form__block-title">Дома</div>
-                  <input type="text" class="form__block-input">
+                  <div class="form__block-title">Дом</div>
+                  <input type="text" class="form__block-input" style="text-align:center;">
                 </label>
                 <label for="" class="form__block">
                   <div class="form__block-title">Корпус</div>
-                  <input type="text" class="form__block-input">
+                  <input type="text" class="form__block-input" style="text-align:center;">
                 </label>
                 <label for="" class="form__block">
                   <div class="form__block-title">Квартира</div>
-                  <input type="text" class="form__block-input">
+                  <input type="text" class="form__block-input" style="text-align:center;">
                 </label>
                 <label for="" class="form__block">
                   <div class="form__block-title">Этаж</div>
-                  <input type="text" class="form__block-input">
+                  <input type="text" class="form__block-input" style="text-align:center;">
                 </label>
               </div>
             </form>
