--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               <div class="form__row">
                 <label for="" class="form__block">
                   <div class="form__block-title">Комментарий</div>
-                  <input type="text" class="form__block-input">
+                  <input type="text" class="form__block-input form__block-input_comment">
                 </label>
               </div>
               <div class="form-controlls">
