--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <section class="section section_centered best">
         <div class="container">
-          <div class="section-title section-title_black">Мы лучшие</div>
+          <h1 class="section-title section-title_black">Мы лучшие</h1>
           <ul class="best__list">
             <li class="best__item">
               <div class="best__image">
@@ -144,7 +144,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -159,7 +159,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -174,7 +174,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -189,7 +189,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -204,7 +204,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -219,7 +219,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -234,7 +234,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -249,7 +249,7 @@
                 </p>
               </div>
               <div class="reviews__btn">
-                <a href="#" class="btn btn_background_black">Подробнее</a>
+                <button class="btn btn_background_black">Подробнее</button>
               </div>
             </div>
           </li>
@@ -259,7 +259,7 @@
       <section class="section section_centered order">
         <div class="container">
 
-          <div class="section-title">Закажите доставку</div>
+          <h1 class="section-title">Закажите доставку</h1>
 
           <div class="order__content">
             <form action="" class="form">
@@ -270,7 +270,7 @@
                 </label>
                 <label for="" class="form__block">
                   <div class="form__block-title">Телефон</div>
-                  <input type="text" class="form__block-input">
+                  <input type="tel" class="form__block-input">
                 </label>
               </div>
               <div class="form__row">
@@ -326,7 +326,9 @@
               </div>
               <div class="form__confirm">
                 <a href="#" class="btn form__confirm-btn">Заказать</a>
-                <p class="form__clear">Очистить</p>
+                <div class="form__clear">
+                  <button class="btn btn_background_none" type="reset">Очистить</button>
+                </div>
               </div>
             </form>
           </div>
