--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Burgers</title>
+  <title>MrBurger</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 
