--- a/index.html
+++ b/index.html
@@ -264,35 +264,35 @@
             <form action="" class="form">
               <div class="form__container">
                 <div class="form__row">
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Имя</div>
                     <input type="text" class="form__block-input">
                   </label>
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Телефон</div>
                     <input type="tel" class="form__block-input">
                   </label>
                 </div>
                 <div class="form__row">
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Улица</div>
                     <input type="text" class="form__block-input">
                   </label>
                 </div>
                 <div class="form__row">
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Дом</div>
                     <input type="text" class="form__block-input" style="text-align:center;">
                   </label>
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Корпус</div>
                     <input type="text" class="form__block-input" style="text-align:center;">
                   </label>
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Квартира</div>
                     <input type="text" class="form__block-input" style="text-align:center;">
                   </label>
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Этаж</div>
                     <input type="text" class="form__block-input" style="text-align:center;">
                   </label>
@@ -301,25 +301,25 @@
 
               <div class="form__container">
                 <div class="form__row">
-                  <label for="" class="form__block">
+                  <label class="form__block">
                     <div class="form__block-title">Комментарий</div>
                     <input type="text" class="form__block-input form__block-input_comment">
                   </label>
                 </div>
                 <div class="form-controlls">
-                  <label for="" class="form-controlls__btn">
+                  <label class="form-controlls__btn">
                     <input type="radio" name="answer" class="form-controlls__radio">
                     <div class="form-controlls__fake-radio"></div>
                     <div class="form-controlls__btn-title">Потребуется сдача</div>
                   </label>
-                  <label for="" class="form-controlls__btn">
+                  <label class="form-controlls__btn">
                     <input type="radio" name="answer" class="form-controlls__radio">
                     <div class="form-controlls__fake-radio"></div>
                     <div class="form-controlls__btn-title">Оплата по карте</div>
                   </label>
                 </div>
                 <div class="form-controlls">
-                  <label for="" class="form-controlls__btn">
+                  <label class="form-controlls__btn">
                     <input type="checkbox" name="answer" class="form-controlls__checkbox">
                     <div class="form-controlls__fake-checkbox"></div>
                     <div class="form-controlls__btn-title">Не перезванивать</div>
