--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <h1 class="section-title">Закажите доставку</h1>
 
           <div class="order__content">
-            <form action="" class="form">
+            <form action="#" class="form">
               <div class="form__container">
                 <div class="form__row">
                   <label class="form__block">
