--- a/index.html
+++ b/index.html
@@ -263,47 +263,47 @@
           <form action="#" class="form">
             <div class="form__container">
               <div class="form__row">
-                <label class="form__block">
-                  <div class="form__block-title">Имя</div>
-                  <input type="text" class="form__block-input">
-                </label>
-                <label class="form__block">
-                  <div class="form__block-title">Телефон</div>
-                  <input type="tel" class="form__block-input">
-                </label>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Имя
+                  <input type="text" class="form__block-input"></label></div>
+                </div>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Телефон
+                  <input type="tel" class="form__block-input"></label></div>
+                </div>
               </div>
               <div class="form__row">
-                <label class="form__block">
-                  <div class="form__block-title">Улица</div>
-                  <input type="text" class="form__block-input">
-                </label>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Улица
+                  <input type="text" class="form__block-input"></label></div>
+                </div>
               </div>
               <div class="form__row">
-                <label class="form__block">
-                  <div class="form__block-title">Дом</div>
-                  <input type="text" class="form__block-input" style="text-align:center;">
-                </label>
-                <label class="form__block">
-                  <div class="form__block-title">Корпус</div>
-                  <input type="text" class="form__block-input" style="text-align:center;">
-                </label>
-                <label class="form__block">
-                  <div class="form__block-title">Квартира</div>
-                  <input type="text" class="form__block-input" style="text-align:center;">
-                </label>
-                <label class="form__block">
-                  <div class="form__block-title">Этаж</div>
-                  <input type="text" class="form__block-input" style="text-align:center;">
-                </label>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Дом
+                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                </div>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Корпус
+                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                </div>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Квартира
+                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                </div>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Этаж
+                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                </div>
               </div>
             </div>
 
             <div class="form__container">
               <div class="form__row">
-                <label class="form__block">
-                  <div class="form__block-title">Комментарий</div>
-                  <input type="text" class="form__block-input form__block-input_comment">
-                </label>
+                <div class="form__block">
+                  <div class="form__block-title"><label>Комментарий
+                  <input type="text" class="form__block-input form__block-input_comment"></label></div>
+                </div>
               </div>
               <div class="form-controlls">
                 <label class="form-controlls__btn">
