changes for order section

--- a/index.html
+++ b/index.html
@@ -281,19 +281,19 @@
               <div class="form__row">
                 <div class="form__block">
                   <div class="form__block-title"><label>Дом
-                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                  <input type="number" class="form__block-input"></label></div>
                 </div>
                 <div class="form__block">
                   <div class="form__block-title"><label>Корпус
-                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                  <input type="number" class="form__block-input"></label></div>
                 </div>
                 <div class="form__block">
                   <div class="form__block-title"><label>Квартира
-                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                  <input type="number" class="form__block-input"></label></div>
                 </div>
                 <div class="form__block">
                   <div class="form__block-title"><label>Этаж
-                  <input type="number" class="form__block-input" style="text-align:center;"></label></div>
+                  <input type="number" class="form__block-input"></label></div>
                 </div>
               </div>
             </div>
