team section added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </section>
 
       <section class="section section_centered best">
-        <div class="container">
+        <div class="container best__container">
           <h1 class="section-title section-title_black">Мы лучшие</h1>
           <ul class="best__list">
             <li class="best__item">
@@ -127,6 +127,66 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="section team">
+        <div class="container team__container">
+          <div class="team__content">
+            <h1 class="section-title">Команда</h1>
+            <div class="accordeon">
+              <ul class="accrodeon__list">
+                <li class="accordeon__item">
+                  <h3 class="accordeon__title">Дэниэл Редклиф</h3>
+                  <div class="accordeon__content">
+                    <div class="accordeon__avatar">
+                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Дэниэла">
+                    </div>
+                    <div class="accordeon__description">
+                      <h4 class="accordeon__description-title">Оператор</h4>
+                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="accordeon__item accordeon__item_active">
+                  <h3 class="accordeon__title">Ричард Джеймс</h3>
+                  <div class="accordeon__content">
+                    <div class="accordeon__avatar">
+                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                    </div>
+                    <div class="accordeon__description">
+                      <h4 class="accordeon__description-title">Оператор</h4>
+                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="accordeon__item">
+                  <h3 class="accordeon__title">Джейк Финн</h3>
+                  <div class="accordeon__content">
+                    <div class="accordeon__avatar">
+                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Джейка">
+                    </div>
+                    <div class="accordeon__description">
+                      <h4 class="accordeon__description-title">Оператор</h4>
+                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="accordeon__item">
+                  <h3 class="accordeon__title">Николай Иванов</h3>
+                  <div class="accordeon__content">
+                    <div class="accordeon__avatar">
+                      <img class="accordeon__avatar-img" src="./images/team-2.png" alt="Фото Николая">
+                    </div>
+                    <div class="accordeon__description">
+                      <h4 class="accordeon__description-title">Оператор</h4>
+                      <p class="accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
 
